--- a/second_day.html
+++ b/second_day.html
@@ -6,6 +6,14 @@
     <title>hi</title>
   </head>
   <body>
-
+    <form>
+    First Name:<br>
+    <input type="text" name="firstname">
+    <br>
+    Last Name:<br>
+    <input type="text" name="lastname">
+    </form>
+    <p> Note that the form itself is not visible. </p>
+    <p> Also note that the default width of a text input field is 20 characters. </p>
   </body>
 </html>
