made Biography fancy

--- a/biography.html
+++ b/biography.html
@@ -1,24 +1,34 @@
 <!<!DOCTYPE html>
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
+
+
   <head>
     <meta charset="utf-8">
     <title>Nabulos Prime</title>
+    <link href="style.css" rel="stylesheet" type="text/css"/>
   </head>
+
+
   <body>
-    <h1> Biography </h1>
-    <h2> Nabulos Prime </h2>
-    <h3> Prince of Primes </h3>
-    <br>
-    <img src="https://66.media.tumblr.com/956f064fe8abd519a55b74d7628d8452/tumblr_n0t85cCZlw1sc7so1o1_1280.png" height="200">
-    <br>
-    <p>I am Nabulos Prime, Prince of Primes, Captain of the Ark of Votum, and I like transformers.</p>
-    <br>
-    <h2> Contact Info </h2>
-    <ul>
-    <li>Tumblr: <a href="https://nabulos.tumblr.com">For memes</a></li>
-    <li>Twitter: <a href="https://www.twitter.com/nabeelprime"> For tweets</a></li>
-    <li>Youtube: <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">For vids</a></li>
-    </ul>
+    <h1 class="MyBio"> Biography </h1>
+    <div class="container">
+      <section id="ActualBio">
+        <h2> Nabulos Prime </h2>
+        <h3> Prince of Primes </h3>
+        <img id="Picture" src="https://66.media.tumblr.com/956f064fe8abd519a55b74d7628d8452/tumblr_n0t85cCZlw1sc7so1o1_1280.png" alt="A picture of Nabulos Prime" height="200"/>
+        <p>I am Nabulos Prime, Prince of Primes, Captain of the Ark of Votum, and I like transformers. This biography needs to be just a tad bit longer so that I can test the text warping.</p>
+      </section>
+
+      <section id="contact-info">
+        <h2> Contact Info </h2>
+        <ul>
+          <li>Tumblr: <a href="https://nabulos.tumblr.com">For memes</a></li>
+          <li>Twitter: <a href="https://www.twitter.com/nabeelprime"> For tweets</a></li>
+          <li>Youtube: <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">For vids</a></li>
+        </ul>
+      </section>
+    </div>
   </body>
 </html>
